# simple_crud

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
CRUD/: __init__.py
simple_crud/: __init__.py  _database_handler.py  create_db.py  delete_db.py  insert_db.py  read_db.py  update_db.py
tests/: test_create_db.py  test_delete.py  test_insert_db.py  test_read_db.py  test_update.py
